force-app/main/default/objects/User_Notification__c/User_Notification__c.object-meta.xml
<CustomObject>
    <label>User Notification</label>
    <nameField>
        <label>User Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>