force-app/main/default/objects/User_Notification__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>User Notifications</relationshipLabel>
    <relationshipName>User_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>